# asymmetric-vanity-npubs

./: .gitignore  BLOCKERS.md  README.md
analysis/: asymmetry_analysis.py  metric_comparison.py  outlier_scanner.py
demo/: index.html
demo/.nsite/: config.json
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
docs/: IMPLEMENTATION-PLAN.md
docs/adr/: ADR-001-anti-phishing-via-entropy-outliers.md  ADR-002-split-zones-disjoint-charsets.md  ADR-003-multiscale-zscore-detection.md  ADR-004-sequential-grinding-strategy.md  ADR-005-wrapped-2d-fingerprint-card.md  ADR-006-offset-grinding-vnaas.md  ADR-007-tooling-strategy-fork-rana.md  ADR-008-atomic-offset-sale.md  ADR-009-unique-char-metric.md
rana-fork/: .gitignore  Cargo.toml  README.md  llms.txt
rana-fork/docs/: entropy-mining-plan.md
rana-fork/src/: cli.rs  entropy.rs  lib.rs  mac_mapping.rs  main.rs  offset.rs
server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
server/gpu/: CMakeLists.txt  README.md
server/gpu/include/: secp256k1.cuh  vanity.cuh
server/gpu/src/: main.cu  offset_grind.cu
server/src/: config.ts  index.ts  types.ts
server/src/backends/: browser-backend.ts  detector.ts  dispatcher.ts  gpu-backend.ts  rana-backend.ts  types.ts
server/src/grinding/: entropy-scanner.ts
server/src/payment/: atomic-swap.ts  cashu.ts  lightning.ts  pricing.ts
server/src/server/: contextvm-server.ts  tools.ts
server/tests/: backend-dispatch.test.ts  entropy-scanner.test.ts  offset-math.test.ts  payment.test.ts
viz/: metric-comparison.html  npub-atomic-swap.html  npub-outlier-viz.html  npub-split-viz.html  npub-viz-approaches.html  npub-viz.html  npub-w-explained.html  npub-wrapped-card.html
