[package]
name = "rana"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Nostr public key mining tool (VNAAS offset-grinding fork)"
repository = "https://github.com/grunch/rana"
keywords = ["nostr", "mining", "pubkeys", "bech32", "vanity"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.15", features = ["env", "default", "derive"] }
regex = "1"
num_cpus = "1.1"
nostr = { version = "0.19.5", default-features = false, features = [
  "nip06",
  "nip19",
] }
qrcode = { version = "0.12", default-features = false }
colored = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
